--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
             </div>
         </div>
 
+        <div class="topShadow"></div>
+
         <div id="main_banner">
             <div id="main_content">
                 <div class="wBox">
@@ -34,7 +36,7 @@
                         <div id="main_text">
                             <p>
                                 코리아메쎄는 전시회 기획, 운영, 디자인, 마케팅 서비스에 특화되어 있는 회사입니다.<br>
-                                해외전시회 및 행사에 특화되어 있는 회사로서 매년 미국, 중국, 일본 등 50여개의 전시회를 진행하는<br>
+                                해외전시회 및 행사에 특화되어 있는 회사로서 매년 미국, 중국, 일본 등 50여개의 전시회를 진행하는
                                 한국의 대표적인 전시 에이전시입니다.
                             </p>
                         </div> <!--mainText-->
