--- a/header.html
+++ b/header.html
@@ -93,7 +93,7 @@
                         <a href="mailto:okt@koreamesse.co.kr">okt@koreamesse.co.kr</a>
                     </div>
                     <div class="contactBox contactBox_none">
-                        <h3>제품문의</h3>
+                        <h3>채용문의</h3>
                         <a href="mailto:okt@koreamesse.co.kr">okt@koreamesse.co.kr</a>
                     </div>
                     <a id="down_btn" href="assets/file/company-profile-kor.pdf" download="assets/file/company-profile-kor.pdf" target="_blank">회사소개서 다운로드</a>
