--- a/header_bottom.html
+++ b/header_bottom.html
@@ -18,13 +18,15 @@
 <body>
     <div id="modal_bg" style="display: none;">
         <img id="modal_close_btn1" class="modal_close_btn" src="./assets/img/icon/close-btn.svg" alt="close-btn">
-        <img id="modal_close_btn2" class="modal_close_btn" src="./assets/img/icon/close-btn-black.svg" alt="close-btn">
         <div id="inquiry_modal">
             <div id="inquiry_content">
-                <h3>
-                    한국을 대표하는 해외 에이전시, 코리아메쎄입니다.<br>
-                    도움이 필요하시면 언제든지 문의하십시오.
-                </h3>
+                <div class="inquiry_title">
+                    <h3>
+                        한국을 대표하는 해외 에이전시, 코리아메쎄입니다.<br>
+                        도움이 필요하시면 언제든지 문의하십시오.
+                    </h3>
+                    <img id="modal_close_btn2" class="modal_close_btn" src="./assets/img/icon/close-btn-black.svg" alt="close-btn">
+                </div>
                 <form action="#" method="post">
 
                     <label for="exhibition_name" class="label_style label_blur">전시명</label>
