--- a/footer.html
+++ b/footer.html
@@ -55,7 +55,7 @@
                     <a href="mailto:okt@koreamesse.co.kr">okt@koreamesse.co.kr</a>
                 </div>
                 <div class="contactBox">
-                    <h3>제품문의</h3>
+                    <h3>채용문의</h3>
                     <a href="mailto:okt@koreamesse.co.kr">okt@koreamesse.co.kr</a>
                 </div>
             </div> <!--contact_sec-->
