--- a/about.html
+++ b/about.html
@@ -420,7 +420,7 @@
                         <img src="./assets/img/about/client-19.png" alt="client-19">
                     </div>
                 </div> <!--clients_content-->
-            </div>
+            </div> <!--content03Mob-->
 
         </div> <!--content03-->
         
